--- a/7-Bootstrap/practice-project/sideBar-practice/sidebar.html
+++ b/7-Bootstrap/practice-project/sideBar-practice/sidebar.html
@@ -7,11 +7,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="d-flex flex-column p-4 justify-content-between align-items-center text-bg-dark position-fixed left-0 top-0 vh-100" style="width: 200px;">
+  <nav class="d-flex flex-column p-4 justify-content-between align-items-center text-bg-dark position-fixed left-0 top-0 vh-100" style="width: 300px;">
     <section class="d-flex flex-column align-items-start w-100">
-      <div class="text-start w-100 p-2 cursor-pointer border">Home</div>
-      <div class="text-start w-100 cursor-pointer hover-bg-light p-2">Contacts</div>
-      <div class="text-start w-100 p-2">Services</div>
+
+      <div class="w-100 h-100 p-2 border d-flex align-items-center flex-row">
+        <svg class="mx-2" style="width: 30px;" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"/>
+        </svg>
+        <p class="fs-4 m-0">Home</p>
+      </div>
+
+      <div class="w-100 h-100 p-2 border d-flex align-items-center flex-row">
+        Contacts
+      </div>
+
+      <div class="w-100 h-100 p-2 border d-flex align-items-center flex-row">
+
+        Services
+      </div>
     </section>
     <section>
 
